# Detcom

./: LICENSE  README.md  odl.sdf  odl.sln
Debug/: odl.ilk
ipch/odl-e5b67bb2/: odl-69641be5.ipch
odl/: CMakeLists.txt  RCb16596  build.bat  main.cpp  odl.vcxproj
odl/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  odl.lastbuildstate  vc100.idb
odl/Release/: RCa04700  odl.exe.recipe  odl.iobj  odl.ipdb  odl.lastbuildstate
odl/Release/microsoft/STL/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.d.json  std.ixx.ifc.dt.module.json.command
odl/Release/odl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  odl.lastbuildstate
